<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/login_card_elevation"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    android:clipToPadding="false"
    android:layout_margin="@dimen/card_login_margin">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/login_root_element_padding"
        android:background="@color/cardSignBackground">

        <EditText
            android:id="@+id/email"
            style="@style/EmailPasswordText"
            android:layout_width="@dimen/login_element_default_width"
            android:layout_height="@dimen/login_element_default_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_address"/>

        <EditText
            android:id="@+id/password"
            style="@style/EmailPasswordText"
            android:layout_width="@dimen/login_element_default_width"
            android:layout_height="@dimen/login_element_default_height"
            android:layout_marginTop="@dimen/login_password_margin_top"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/email"
            android:layout_alignStart="@id/email"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/keep_me_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginStart="@dimen/login_checkbox_margin_start"
            android:layout_marginTop="@dimen/login_checkbox_margin_top"
            android:layout_below="@id/password"
            android:layout_alignStart="@id/password"
            app:buttonTint="@color/white"
            android:text="@string/keep_me_sign_in"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/sign_in"
            style="@style/SignInButton"
            android:layout_width="@dimen/login_element_default_width"
            android:layout_height="@dimen/login_element_default_height"
            android:layout_alignStart="@id/password"
            android:layout_below="@id/keep_me_check"
            android:layout_marginTop="@dimen/login_signin_margin_top"
            android:text="@string/sign_in"
            android:enabled="false"/>

        <Button
            android:id="@+id/sign_up"
            style="@style/SignUpButton"
            android:layout_width="@dimen/login_element_default_width"
            android:layout_height="@dimen/login_element_default_height"
            android:layout_alignStart="@id/password"
            android:layout_below="@id/sign_in"
            android:layout_marginTop="@dimen/login_signup_margin_top"
            android:text="@string/sign_up"/>

        <TextView
            android:id="@+id/forgot_password"
            style="@style/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/login_forgot_password_padding"
            android:layout_marginTop="@dimen/login_forgot_margin_top"
            android:text="@string/forgot_password"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>