<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/card_login_margin"
    android:clipToPadding="false"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="@dimen/login_card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardSignBackground"
        android:padding="@dimen/sing_up_root_element_padding">

        <FrameLayout
            android:id="@+id/image_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/sign_up_avatar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_pic"
                android:layout_width="@dimen/sing_up_avatar_size"
                android:layout_height="@dimen/sing_up_avatar_size"
                android:src="@drawable/userpic" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/image_wrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/sing_up_email_margin_top"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_email"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:text="@string/email_com"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/text_input_email"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password_confirm"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/text_input_password"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_confirm_password"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_full_name"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/text_input_password_confirm"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_full_name"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_phone"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/text_input_full_name"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_phone"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:text="@string/ukr_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_website"
            app:errorTextAppearance="@style/TextInputLayoutInvalidInfo"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/text_input_phone"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/email_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_website"
                style="@style/RegisterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_facebook_button"
            style="@style/FbButton"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="@dimen/sing_up_element_height"
            android:layout_below="@id/text_input_website"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/sign_up_fb_margin_top"
            android:paddingLeft="@dimen/sing_up_fb_padding"
            android:paddingRight="@dimen/sing_up_fb_padding"
            android:text="@string/link_facebook" />

        <Button
            android:id="@+id/register_sign_up"
            style="@style/SignUpButton"
            android:layout_width="@dimen/sing_up_element_width"
            android:layout_height="@dimen/sing_up_element_height"
            android:layout_below="@id/login_facebook_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/sign_up_btn_sign_up_margin_bottom"
            android:layout_marginTop="@dimen/sing_up_btn_sign_up_margin_top"
            android:text="@string/sign_up" />

    </RelativeLayout>

</android.support.v7.widget.CardView>